--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.github.FeryaFox</groupId>
             <artifactId>GLampJava</artifactId>
-            <version>1.0.6</version>
+            <version>1.0.9</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -77,7 +77,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>ru.feryafox.glamppc/ru.feryafox.glamppc.MainApplication</mainClass>
+                            <mainClass>ru.feryafox.glamppc/ru.feryafox.glamppc.GLampPCApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
